--- a/templates/customadmin/addproduct.html
+++ b/templates/customadmin/addproduct.html
@@ -114,7 +114,7 @@
                  <!-- offer -->
                  <div class="form-group">
                     <label for="category">Offer:</label>
-                    <select id="offer" name="offer" class="form-control" required>
+                    <select id="offer" name="offer" class="form-control" >
                         <option value="" selected disabled>Select Category</option>
                         {% for j in off %}
                         <option value="{{j.id}}">{{j.name}}</option>
