--- a/templates/userside/userdashboard.html
+++ b/templates/userside/userdashboard.html
@@ -294,7 +294,7 @@
                                 <a href="#">Links</a>
                                 <ul>
                                     <li><a href="tel:#"><i class="icon-phone"></i>Call: +0123 456 789</a></li>
-                                    {% comment %} <li><a href="{% url 'wishlist:Wishlist' %}"><i class="icon-heart-o"></i>Wishlist <span>(3)</span></a></li>  {% endcomment %}
+                                    <li><a href="{% url 'wishlist:Wishlist' %}"><i class="icon-heart-o"></i>Wishlist <span>(3)</span></a></li> 
                                     <li><a href="about.html">About Us</a></li>
                                     <li><a href="contact.html">Contact Us</a></li>
                                     {% comment %} <li><a href="#signin-modal" data-toggle="modal"><i class="icon-user"></i>Login</a></li> {% endcomment %}
