--- a/templates/userside/home.html
+++ b/templates/userside/home.html
@@ -130,7 +130,7 @@
                     </div><!-- End .header-left -->
 
                     <div class="header-right">
-                        <a href="wishlist.html" class="wishlist-link">
+                        <a href="{% url 'wishlist:Wishlist' %}" class="wishlist-link">
                             <i class="icon-heart-o"></i>
                             <span class="wishlist-count">3</span>
                             <span class="wishlist-txt">My Wishlist</span>
