--- a/templates/userside/checkout.html
+++ b/templates/userside/checkout.html
@@ -1266,6 +1266,20 @@
                               >
                             </h2>
                           </div>
+                          <div class="card-header" id="heading-1">
+                            <h2 class="card-title">
+                              <input
+                                type="radio"
+                                name="payment_method"
+                                value="cash_on_delivery"
+                                id="payment-cash-on-delivery"
+                                checked
+                              />
+                              <label for="payment-cash-on-delivery"
+                                >Wallet</label
+                              >
+                            </h2>
+                          </div>
                           <div class="card-header" id="heading-2">
                             <h2 class="card-title">
                               <input
@@ -1288,6 +1302,15 @@
                               sit amet, consectetuer adipiscing elit. Donec
                               odio. Quisque volutpat mattis eros.
                             </div>
+                            <label for="payment-razor-pay">Wallet</label>
+                          </h2>
+                        </div>
+                        <div
+                          id="collapse-3"
+                          class="collapse"
+                          aria-labelledby="heading-3"
+                          data-parent="#accordion-payment"
+                        >
                           </div>
                         </div>
                         <div class="card">
