--- a/templates/userside/shop.html
+++ b/templates/userside/shop.html
@@ -121,10 +121,10 @@
                                 <a href="#">Links</a>
                                  <ul>
                                     
-                                    <li><a href="{% url 'wishlist:Wishlist' %}"><i class="icon-heart-o"></i>Wishlist <span></span></a></li> 
+                                    <li><a href="{% url 'wishlist:Wishlist' %}"><i class="icon-heart-o"></i>Wishlist <span>(3)</span></a></li> 
 
                                 </ul> 
-                               
+                                {% comment %} <li><a href="{% url 'wishlist:Wishlist' %}"><i class="icon-heart-o"></i>Wishlist <span>(3)</span></a></li>  {% endcomment %}
 
                                 
                             </li>
