--- a/templates/userside/userdashboard.html
+++ b/templates/userside/userdashboard.html
@@ -34,7 +34,43 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 </head>
-
+<style>
+.balance {
+    background-color: #ffffff;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    margin-bottom: 20px;
+}
+.balance h2 {
+    margin-top: 0;
+}
+.history {
+    background-color: #ffffff;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+.history h3 {
+    margin-top: 0;
+}
+.transaction {
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+}
+.transaction:last-child {
+    border-bottom: none;
+}
+.transaction p {
+    margin: 0;
+}
+.transaction-date {
+    
+    color: #888;
+}
+</style>
 <body>
      
       <!-- EDIT ADDRESS MODAL -->
@@ -704,7 +740,7 @@
                                         <a class="nav-link" id="tab-address-link" data-toggle="tab" href="#tab-address" role="tab" aria-controls="tab-address">Addresses</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" id="tab-account-link" data-toggle="tab" href="#tab-account" role="tab" aria-controls="tab-account">Account Details</a>
+                                        <a class="nav-link" id="tab-account-link" data-toggle="tab" href="#tab-account" role="tab" aria-controls="tab-account">Wallet`</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="{% url 'userprofile:signout' %}">Sign Out</a>
@@ -759,7 +795,13 @@
                                                 {% for i in ordered_items %}
                                                 <tr>
                                                     <td>{{ i.ordered_date }}</td>
-                                                    <td>{{i.product_price}}</td>
+                                                    <td class="total-col" id="total-price-{{ i.id }}"> 
+                                                        {% if i.product.offer %}
+                                                               
+                                                                ₹{{i.get_discount_cart_total_order}}
+                                                                {% else %}
+                                                                ₹{{i.total_amount_order}}
+                                                                {% endif %}
                                                     <td>{{ i.payment_method }}</td>
                                                     <td><a href="{% url 'userprofile:view_details' i.id %}">View</a></td>
                                                 </tr>
@@ -856,40 +898,43 @@
 								    </div><!-- .End .tab-pane -->
 
 								    <div class="tab-pane fade" id="tab-account" role="tabpanel" aria-labelledby="tab-account-link">
-								    	<form action="#">
-			                				<div class="row">
-			                					<div class="col-sm-6">
-			                						<label>First Name *</label>
-			                						<input type="text" class="form-control" required>
-			                					</div><!-- End .col-sm-6 -->
+                                        <div class="container">
+                                            <div class="header">
+                                                <h1>Wallet</h1>
+                                            </div>
+                                            <div class="balance">
+                                                <h2>Balance:  {{balance}}</h2>
+                                            </div>
+                                            <h3>Transaction History</h3>
+                                            <div class="history">
+                                               {% for i in wallet_items %}
+                                                <div class="transaction" style="display:flex;justify-content:space-around">
+                                                    <p class="transaction-date">{{i.date_time}}</p>
 
-			                					<div class="col-sm-6">
-			                						<label>Last Name *</label>
-			                						<input type="text" class="form-control" required>
-			                					</div><!-- End .col-sm-6 -->
-			                				</div><!-- End .row -->
+                                                    <p><strong></strong> {{i.amount}}</p>
+                                                    <p>{% if is_credit is t %}
+                                                        Credit
+                                                        {% else %}
+                                                        Debit
+                                                        {% endif %}
+                                                    </p>
+                                                </div>
+                                                {% endfor %}
+                                                {% comment %} <div class="transaction" style="display:flex;justify-content:space-around">
+                                                    <p class="transaction-date">2024-07-30</p>
 
-		            						<label>Display Name *</label>
-		            						<input type="text" class="form-control" required>
-		            						<small class="form-text">This will be how your name will be displayed in the account section and in reviews</small>
+                                                    <p><strong>Payment</strong>: $50.00</p>
+                                                    <p>Debited</p>
+                                                </div>
+                                                <div class="transaction" style="display:flex;justify-content:space-around">
+                                                    <p class="transaction-date">2024-07-30</p>
 
-		                					<label>Email address *</label>
-		        							<input type="email" class="form-control" required>
-
-		            						<label>Current password (leave blank to leave unchanged)</label>
-		            						<input type="password" class="form-control">
-
-		            						<label>New password (leave blank to leave unchanged)</label>
-		            						<input type="password" class="form-control">
-
-		            						<label>Confirm new password</label>
-		            						<input type="password" class="form-control mb-2">
-
-		                					<button type="submit" class="btn btn-outline-primary-2">
-			                					<span>SAVE CHANGES</span>
-			            						<i class="icon-long-arrow-right"></i>
-			                				</button>
-			                			</form>
+                                                    <p><strong>Payment</strong>: $50.00</p>
+                                                    <p>Debited</p>
+                                                </div> {% endcomment %}
+                                                <!-- Add more transactions as needed -->
+                                            </div>
+                                        </div>
 								    </div><!-- .End .tab-pane -->
 								</div>
 	                		</div><!-- End .col-lg-9 -->
